--- a/layouts/partials/content_header.html
+++ b/layouts/partials/content_header.html
@@ -75,7 +75,7 @@
                         <!-- 一言 -->
                         {{ with .Site.Params.yiyan }}
                         <li class="nav-item mr-3 mr-lg-0 d-none d-lg-block">
-                            <script>
+                            <!-- <script>
                                 fetch('https://v1.hitokoto.cn')
                                     .then(response => response.json())
                                     .then(data => {
@@ -84,7 +84,7 @@
                                     hitokoto.innerText = data.hitokoto
                                     })
                                     .catch(console.error)
-                            </script>                           
+                            </script>                            -->
                             <div id="hitokoto"><a href="#" target="_blank" id="hitokoto_text">疏影横斜水清浅，暗香浮动月黄昏。</a></div>
                         </li>
                         {{ end }}
