--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -118,10 +118,10 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class="border-top py-2 border-color">
+                <div class="border-top py-2 border-color">
                     <div class="flex-bottom">
                         <ul>
-                            <li id="menu-item-237"
+                            <!-- <li id="menu-item-237"
                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-237 sidebar-item">
                                 <a href="{{ $.Site.Params.upload }}" target="_blank">
                                     <i class="fas fa-file-upload icon-fw icon-lg mr-2"></i>
@@ -141,9 +141,9 @@
                                 <a target="_blank" rel="noopener" href="{{ $.Site.Params.about }}">
                                     <i class="fa fa-info-circle icon-fw icon-lg mr-2"></i>
                                     <span>关于导航</span></a>
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
-                </div> -->
+                </div>
             </div>
         </div>
